welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: value update is not a member of java.awt.Color
  if (getCouleurSol() = Color.green ) {return true}
      ^